# RustBetterApi

./: Cargo.toml  diesel.toml
.cargo/: config.toml
migrations/2025-05-29-012143_create_posts/: up.sql
migrations/2025-05-30-000357_create_users/: up.sql
src/: main.rs  schema.rs
src/config/: openapi.rs
src/features/: mod.rs  posts.rs  users.rs
src/models/: post.rs  user.rs
