[package]
name = "ApiNew2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utils
dotenvy = "0.15.7"

# Framework
actix-web = "4.11.0"
actix-cors = "0.7.1"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }

# Configuration
config = "0.15.11"

# Logging
tracing = "0.1.41"

# OpenAPI Documentation
utoipa-swagger-ui = { version = "8.0.0", features = ["actix-web"] } # Use actix-web feature instead of reqwest
utoipa = { version = "5.3.1", features = ["chrono"] }

# Database
diesel = { version = "2.2.10", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4.41"
